# cppderiv

./: CMakeLists.txt  LICENSE  README.md  setup.py  test.cpp
example/: example.py
include/: cppderiv.hpp
src/: bind.cpp  cppderiv.cpp
tests/: eigen_expr.cpp  fix_indices.cpp
